# ckanext-lhm

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/lhm/: cli.py  get_data.py  helpers.py  plugin.py  tp.py  views.py
ckanext/lhm/archive/: group_form_old_error.html  lhm_dataset.yaml  listeners.py
ckanext/lhm/assets/: script.js  style.css  webassets.yml
ckanext/lhm/assets/js/: datapicker.js
ckanext/lhm/assets_theme/css/: theme_lhm.css
ckanext/lhm/assets_theme_2.9.9/: webassets.yml
ckanext/lhm/assets_theme_2.9.9/css/: marker.css  theme_lhm.css
ckanext/lhm/i18n/: ckanext-lhm.pot
ckanext/lhm/i18n/de/LC_MESSAGES/: ckanext-lhm.mo  ckanext-lhm.po
ckanext/lhm/logic/: action.py  auth.py  schema.py  validators.py
ckanext/lhm/schemas/: geodatenpool_dataset.yaml  init_group.json  lhm_dataset.yaml  mobidam_dataset.yaml  presets.yaml  presets_lhm.yaml  template_gdp.xlsx  template_gdp_v1.2.4.xlsx  template_master.xlsx  template_master_v1.2.4.xlsx  template_mobidam.xlsx  template_mobidam_v1.2.4.xlsx  validation_placeholder_presets.yaml
ckanext/lhm/templates/ajax_snippets/: dictionary_field.html
ckanext/lhm/templates/dictionary/: dictionary.html
ckanext/lhm/templates/home/snippets/: search.html
ckanext/lhm/templates/macros/: form.html
ckanext/lhm/templates/override/: resource_read_extend.html
ckanext/lhm/templates/package/: read_base.html  resource_read.html
ckanext/lhm/templates/snippets/: _search_form.html  add_datasets_lhm.html  organization.html  search_form.html
ckanext/lhm/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/lhm/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext/lhm/theme_templates/: footer.html  header.html
ckanext/lhm/theme_templates_2.9.9/: base.html  footer.html  header.html
ckanext/lhm/theme_templates_2.9.9/package/: read.html
(+41 files in other folders)
