[metadata]
name = ckanext-lhm
version = 0.0.1
description = This is an extension specific to the requirements of the LHM UDP Catalog.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://...//ckanext-lhm
author = Mandana Moshrefzadeh
author_email = mandana.moshrefzadeh@muenchen.de
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN LHM Munich UDP GeospatialData UrbanData

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             lhm = ckanext.lhm.plugin:LHMCatalogPlugin
             lhm_theme = ckanext.lhm.plugin:LHMThemePlugin
             lhm_template_wrapper = ckanext.lhm.plugin:LHMTemplateWrapper
babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/lhm/i18n/ckanext-lhm.pot
width = 80

[init_catalog]
domain = ckanext-lhm
input_file = ckanext/lhm/i18n/ckanext-lhm.pot
output_dir = ckanext/lhm/i18n

[update_catalog]
domain = ckanext-lhm
input_file = ckanext/lhm/i18n/ckanext-lhm.pot
output_dir = ckanext/lhm/i18n
previous = true

[compile_catalog]
domain = ckanext-lhm
directory = ckanext/lhm/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
